# S21_3DViewer_v2.0

src/: CMakeLists.txt  Makefile  main.cpp  rmcache.sh
src/app/Common/Enum/: AffineOps.h  Axes.h  LineType.h  ProjectionType.h  SettingsType.h  VertexType.h
src/app/Common/FacadeOpResult/: FacadeOpResult.cpp  FacadeOpResult.h
src/app/Common/IController/: IResourceProvider.h  ISceneLoader.h
src/app/Common/Observer/Observable/: Observable.cpp
src/app/Common/Settings/SettingsPackage/: SettingsPackage.cpp  SettingsPackage.h
src/app/Common/Settings/VariantSetting/: VariantSetting.h  VariantSetting.tpp
src/app/Common/Structures/: Point.h
src/app/Common/Structures/RGB/: RGB.cpp  RGB.h
src/app/Controller/: Controller.cpp  Controller.h
src/app/Model/: Model.cpp  Model.h
src/app/Model/Components/AffineTransformations/Builder/: AffineBuilder.cpp  AffineBuilder.h
src/app/Model/Components/AffineTransformations/ITransformation/: ITransformation.h
src/app/Model/Components/AffineTransformations/Move/: Move.cpp  Move.h
src/app/Model/Components/AffineTransformations/Rotate/: Rotate.cpp  Rotate.h
src/app/Model/Components/AffineTransformations/Scale/: Scale.cpp  Scale.h
src/app/Model/Components/Figure/: Figure.cpp  Figure.h
src/app/Model/Components/FileReader/: FileReader.cpp  FileReader.h
src/app/Model/Components/FileReader/IFileReader/: IFileReader.h
src/app/Model/Components/GifMaker/: GifMaker.cpp  GifMaker.h
src/app/Model/Components/NormParams/: NormParams.h
src/app/Model/Components/Scene/: Scene.cpp  Scene.h
src/app/Model/Components/Settings/: Settings.cpp  Settings.h
src/app/View/: View.cpp  View.h  ViewConstructor.cpp
src/app/View/Components/ColorPicker/: ColorPicker.h  СolorPicker.cpp
src/app/View/Components/OpenGLWidget/: OpenGLWidget.cpp  OpenGLWidget.h
src/app/View/Components/Style/: StylesTables.h
src/doc/: DoxyFile  Doxyfile
src/unit_tests/: AdditionalRotationTests.cpp  CMakeLists.txt  FileReaderTests.cpp  MoveTests.cpp  RotateTests.cpp  ScaleTests.cpp  tests.h
(+16 files in other folders)
